# show-haddock

./: README.md  show-haddock.cabal
app/: Main.hs
src/: Lib.hs
